// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JoinRuleConfirmation > renders when isJoinRuleChangeConfirmed=false 1`] = `
<div>
  <form
    class="_root_1o4d9_17"
  >
    <div
      class="_flex_4dswl_9 sc-bdvwhi bbouSd"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-6x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="_flex_4dswl_9"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
      >
        <span
          class="_typography_6v6n8_153 _font-body-md-semibold_6v6n8_55"
        >
          Currently this room doesn't allow guests
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 sc-gsDMPd MUQrf"
        >
          Check the box below to confirm you want change room access to allow guests in
        </span>
      </div>
      <div
        class="_inline-field_1o4d9_33"
      >
        <div
          class="_inline-field-control_1o4d9_45"
        >
          <div
            class="_container_153f2_10"
          >
            <input
              class="_input_153f2_18"
              id="radix-_r_1_"
              name="joinRule"
              title=""
              type="checkbox"
            />
            <div
              class="_ui_153f2_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_1o4d9_39"
        >
          <label
            class="_label_1o4d9_60"
            for="radix-_r_1_"
          >
            Change room access to Ask to join
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`JoinRuleConfirmation > renders when isJoinRuleChangeConfirmed=true 1`] = `
<div>
  <form
    class="_root_1o4d9_17"
  >
    <div
      class="_flex_4dswl_9 sc-bdvwhi bbouSd"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-6x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="_flex_4dswl_9"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
      >
        <span
          class="_typography_6v6n8_153 _font-body-md-semibold_6v6n8_55"
        >
          Currently this room doesn't allow guests
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 sc-gsDMPd MUQrf"
        >
          Check the box below to confirm you want change room access to allow guests in
        </span>
      </div>
      <div
        class="_inline-field_1o4d9_33"
      >
        <div
          class="_inline-field-control_1o4d9_45"
        >
          <div
            class="_container_153f2_10"
          >
            <input
              checked=""
              class="_input_153f2_18"
              id="radix-_r_0_"
              name="joinRule"
              title=""
              type="checkbox"
            />
            <div
              class="_ui_153f2_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_1o4d9_39"
        >
          <label
            class="_label_1o4d9_60"
            for="radix-_r_0_"
          >
            Change room access to Ask to join
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;
